# worship-deck-builder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: slide_map.yaml
scripts/: extract_backgrounds.py  make_fixtures.py
src/npc_deck/: __init__.py  obs.py  pipeline.py
src/npc_deck/bible/: verses.py
src/npc_deck/keynote/: build.py
src/npc_deck/lyrics/: transcribe.py
src/npc_deck/web/: app.py
src/worship_deck/: __init__.py  obs.py  pipeline.py
src/worship_deck/bible/: esv.py  kkrv.py  ref.py  verses.py
src/worship_deck/parse/: __init__.py  bulletin.py
src/worship_deck/render/: render.py
src/worship_deck/web/: app.py
templates/: README.md
tests/: conftest.py  test_bible_ref.py  test_esv.py  test_fixtures.py  test_kkrv.py  test_parse.py  test_pipeline.py  test_render.py  test_smoke.py  test_verses.py
tests/fixtures/: README.md  sample_template.key
