[project]
name = "worship-deck-builder"
version = "0.1.0"
description = "Automates the weekly Keynote worship deck for a Sunday worship service"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber",      # bulletin PDF parsing
    "anthropic",       # lyric transcription from sheet images
    "httpx",           # ESV API + general HTTP
    "pyyaml",          # slide_map.yaml
    "jinja2",          # HTML slide templates
    "playwright",      # render HTML templates -> PNG
    "fastapi",         # mobile review/trigger web app
    "uvicorn",         # ASGI server
    "python-multipart",# file uploads in the web app
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "Pillow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worship_deck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["local_only: requires a Mac with Keynote; skipped in CI"]

[tool.ruff]
line-length = 100
